# neural_network-

./: README.md  neuralNetwork.sln  neural_network.sln
Debug/: neural_network.ilk
Tests/Tests/: Tests.vcxproj  test.cpp
neuralNetwork/: BackPropagation.h  CMake  CMakeLists.txt  GUI.h  GUI.ui  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkImplementation.cpp  NeuralNetworkImplementation.h  Percepton.h  Perceptron.h  README  TrainingData.h  main.cpp  neuralNetwork.vcxproj  neuralNetwork.vcxproj.filters
neuralNetwork/doc/: Doxyfile
neuralNetwork/doc/html/: BackPropagation_8h_source.html  classGUI.html  (+75 more)
neuralNetwork/src/: ActivFunctions.h  BackPropagation.cpp  BackPropagation.h  BreastCancerClassification.h  CMake  CMakeLists.txt  Data.txt  DataForLearning.txt  Exceptions.h  GUI.cpp  GUI.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkImplementation.cpp  NeuralNetworkImplementation.h  Perceptron.cpp  Perceptron.h  TrainingData.cpp  TrainingData.h
neuralNetwork/src/GUI/: CMake  CMakeLists.txt  GUI.cpp  GUI.h  GUI.ui  GUI1.h  GUI_.h
neural_network/: AbstractNeuralNetwork.cpp  AbstractNeuralNetwork.h  BackPropagation.cpp  BackPropagation.h  BreastCancerClassification.cpp  BreastCancerClassification.h  Dataset.h  Layer.h  NeuralNetwork.h  NeuralNetworkImplementation.cpp  NeuralNetworkImplementation.h  Percepton.cpp  Percepton.h  TestingAnalysis.cpp  TestingAnalysis.h  TrainingData.h  main.cpp  neural_network.vcxproj  neural_network.vcxproj.filters
neural_network/Debug/: vc142.idb
x64/Debug/: neuralNetwork.ilk  neural_network.ilk
(+79 files in other folders)
